--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,6 +10,7 @@ import "../styles/global.css";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content={description} />
+    <meta property="og:image" content={new URL('/ogp.png', new URL(Astro.url.pathname, 'https://otakakot.tokyo'))} />
     <!-- FAVICON -->
     <link rel="shortcut icon" href="..//favicon.ico" type="image/x-icon" />
     <!-- GOOGLE FONTS -->
