--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import Card from "../components/Card.astro";
 ---
 
-<BaseLayout title="otakakot" description="kotaro otaka profile page">
+<BaseLayout title="otakakot" description="おーたかこーたろーのぷろふぃーる">
 	<Card
 		name="Kotaro Otaka"
 		position="Gopher / Gofan"
